// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rxConnect RxJS 5 accepts function-based mutations 1`] = `
<div>
  123
</div>
`;

exports[`rxConnect RxJS 5 ignores not connect properties 1`] = `<div />`;

exports[`rxConnect RxJS 5 noDebounce 1`] = `
<div>
  0
</div>
`;

exports[`rxConnect RxJS 5 noDebounce 2`] = `
<div>
  1
</div>
`;

exports[`rxConnect RxJS 5 passes children automatically 1`] = `
<div>
  Hello, RxConnect!
</div>
`;

exports[`rxConnect RxJS 5 passes properties as Observable 1`] = `
<div>
  123
</div>
`;

exports[`rxConnect RxJS 5 receives new props 1`] = `
<div>
  15
</div>
`;

exports[`rxConnect RxJS 5 receives new props 2`] = `
<div>
  15
</div>
`;

exports[`rxConnect RxJS 5 receives new props 3`] = `
<div>
  -15
</div>
`;

exports[`rxConnect RxJS 5 throws an error if mutation is neither an object or function 1`] = `
Array [
  "Mutation must be a plain object or function. Check rxConnect of Component. Got: ",
  Array [
    123,
  ],
]
`;

exports[`rxConnect RxJS 5 throws an error if selector is neither an Observable or function 1`] = `
Array [
  "Selector must be a function or an Observable. Check rxConnect of Component. Got: ",
  undefined,
]
`;

exports[`rxConnect RxJS 5 throws an error if selector returns non-Observable 1`] = `
Array [
  "Selector must return an Observable or an iterator of observables. Check rxConnect of Component. Got: ",
  undefined,
]
`;

exports[`rxConnect RxJS 5 works with Array 1`] = `
<div>
  123
  bar
</div>
`;

exports[`rxConnect RxJS 5 works with Generator 1`] = `
<div>
  123
  bar
</div>
`;

exports[`rxConnect RxJS 5 works with Observable 1`] = `
<div>
  123
</div>
`;
